2008-12-08 Some of the changes Michael made to improve the output of
           the property tables in the rest docs broke of made
           difficult to use some of the interactive doc helpers, eg
           setp and getp.  Having all the rest markup in the ipython
           shell also confused the docstrings.  I added a new rc param
           docstring.harcopy, to format the docstrings differently for
           hardcopy and other use.  Ther ArtistInspector could use a
           little refactoring now since there is duplication of effort
           between the rest out put and the non-rest output - JDH

2008-12-08 Updated spectral methods (psd, csd, etc.) to scale one-sided
           densities by a factor of 2 and, optionally, scale all densities
           by the sampling frequency.  This gives better MatLab
           compatibility. -RM

2008-12-08 Fixed alignment of ticks in colorbars. -MGD

2008-12-07 drop the deprecated "new" keyword of np.histogram() for
           numpy 1.2 or later.  -JJL

2008-12-06 Fixed a bug in svg backend that new_figure_manager()
           ignores keywords arguments such as figsize, etc. -JJL

2008-12-05 Fixed a bug that the handlelength of the new legend class
           set too short when numpoints=1 -JJL

2008-12-04 Added support for data with units (e.g. dates) to
           Axes.fill_between. -RM

2008-12-04 Added fancybox keyword to legend. Also applied some changes
           for better look, including baseline adjustment of the
           multiline texts so that it is center aligned. -JJL

2008-12-02 The transmuter classes in the patches.py are reorganized as
           subclasses of the Style classes. A few more box and arrow
           styles are added. -JJL

2008-12-02 Fixed a bug in the new legend class that didn't allowed
           a tuple of coordinate vlaues as loc. -JJL

2008-12-02 Improve checks for external dependencies, using subprocess
           (instead of deprecated popen*) and distutils (for version